# mcp-server-weather

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  user_prompt.md  weather.py
.taskmaster/: config.json  state.json
prds/prd-code-quality-improvements/: prd-code-quality-improvements.md
prds/prd-code-quality-improvements/tasks/: tasks-prd-code-quality-improvements.md
src/ms_calendar/: __init__.py  calendar_service.py  server.py
src/weather/: __init__.py  nws_client.py  server.py
tests/: __init__.py  conftest.py  test_alerts_endpoint.py  test_endpoint_validation.py  test_forecast_endpoint.py  test_mock_responses.py  test_nws_client.py  test_nws_request_util.py  test_server.py  test_server_extras.py
tests/fixtures/: sample_alerts_response.json  sample_forecast_response.json
